# Athena

./: .env.example  .gitignore  INITIAL.md  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
agent_brain/: __init__.py  graph.py  nodes.py  state.py  tools.py  verify_agent.py
athena_core/: api.py  backfill.py  config.py  graph_syncer.py  ingestion.py  vector_indexer.py
docs/: Athena_DDD_Database-Schema_v0.1.0.md  Athena_Documentation_Rules.md  Athena_Feasibility-Study_Technical-Analysis_v0.1.0.md  Athena_HLD_System-Architecture_v0.2.0.md  Athena_HLD_System-Architecture_v0.3.0.md  Athena_HLD_System-Architecture_v0.4.0.md  Athena_Implementation-Report_Data-Ingestion-GraphRAG-Pipeline_v0.1.0.md  Athena_Implementation-Report_Project-Universe-Simulator_v0.1.0.md  Athena_Literature-Survey_Research-Review_v0.1.0.md  Athena_Presentation_Mid-Term-Demo_v0.2.0.md  Athena_Presentation_Mid-Term-Review_v0.1.0.md  Athena_Presentation_Zeroeth-Review_v0.1.0.md  Athena_Project-Plan_Detailed-Schedule_v0.1.0.md  Athena_Project-Report_Initial-Phase_v0.1.0.md  Athena_Report_Mid-Term_v0.1.0.md  Athena_Research_Domain-Analysis_v0.1.0.md  Athena_SRS_Functional-Requirements_v0.2.0.md  Athena_SRS_Functional-Requirements_v0.3.0.md  Athena_Synopsis_Zeroeth-Review_v0.2.0.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ATLPanel.tsx  ChatPanel.tsx  MetricsPanel.tsx  (+2 more)
simulator/: api.py  audit_data.py  chaos_engine.py  data_gen.py  database.py  test_connections.py  timeline_sim.py  webhook.py
(+2 files in other folders)
